--- a/frontend/src/assets/css/reset.css
+++ b/frontend/src/assets/css/reset.css
@@ -26,7 +26,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	background: #eee;
+	background: #fff;
 }
 ol, ul {
 	list-style: none;
